--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.7.5",
+    "draft-js": "^0.11.0",
+    "draftjs-to-html": "^0.8.4",
+    "html-to-draftjs": "^1.4.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-scripts": "3.1.1"
   },
   "scripts": {
