--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-inline": "^12.4.0",
+    "@ckeditor/ckeditor5-react": "^1.1.3",
     "bulma": "^0.7.5",
     "draft-js": "^0.11.0",
     "draftjs-to-html": "^0.8.4",
