--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-popupbox": "^2.0.8",
     "react-scripts": "3.1.1"
   },
   "scripts": {
