--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
+    "pretty": "^2.0.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-draft-wysiwyg": "^1.13.2",
